--- a/src/app/characters/character-list/character-list.component.css
+++ b/src/app/characters/character-list/character-list.component.css
@@ -37,3 +37,16 @@ a{
   outline: none;  
   color: #000;
 }
+
+.pagination {
+  margin-top: 15px;
+  display: flex;
+  justify-content: end;
+  gap: 10px;
+}
+
+.pagination button {
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
