--- a/src/app/characters/character-list/character-list.component.html
+++ b/src/app/characters/character-list/character-list.component.html
@@ -15,8 +15,8 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let char of filteredCharacters; let i = index">
-          <td>{{ i + 1 }}</td>
+        <tr *ngFor="let char of displayedCharacters; let i = index">
+          <td>{{ (currentPage - 1) * pageSize + i + 1 }}</td>
           <td>
             <a [routerLink]="['/characters', i+1]" target="_blank">
               {{ char.name }}
@@ -28,6 +28,12 @@
         </tr>
       </tbody>
     </table>
+
+    <div class="pagination">
+      <button (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1">Prev</button>
+      <span>Page {{ currentPage }} of {{ totalPages }}</span>
+      <button (click)="goToPage(currentPage + 1)" [disabled]="currentPage === totalPages">Next</button>
+    </div>
   </div>
 </div>
 
